<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/profile_fragment">

    <fragment
        android:id="@+id/internship_fragment"
        android:name="com.kotlinapp.internships.InternshipsFragment"
        android:label="@string/item_list"
        tools:layout="@layout/internships_fragment" />

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.kotlinapp.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment" />

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.kotlinapp.fragments.ProfileFragment"
        android:label="@string/item_edit" />

    <fragment
        android:id="@+id/student_profile_fragment"
        android:name="com.kotlinapp.fragments.StudentFragment"
        android:label="@string/item_edit"
        tools:layout="@layout/student_profile_fragment" />

    <fragment
        android:id="@+id/company_profile_fragment"
        android:name="com.kotlinapp.fragments.CompanyFragment"
        android:label="@string/item_edit"
        tools:layout="@layout/company_profile_fragment"/>

    <fragment
        android:id="@+id/create_student_account_fragment"
        android:name="com.kotlinapp.auth.account.CreateStudentAccountFragment"
        android:label="@string/item_edit"
        tools:layout="@layout/create_student_account_fragment" />

    <fragment
        android:id="@+id/create_company_account_fragment"
        android:name="com.kotlinapp.auth.account.CreateCompanyAccountFragment"
        android:label="@string/item_edit"
        tools:layout="@layout/create_company_account_fragment" />

</navigation>